Convert to kotlin and update code to not use javapsi which has stopped working.

--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,8 @@
 buildscript {
     ext {
-        kotlinVersion = '1.5.30'
-        // Current lint target: 7.0.2
-        gradlePluginVersion = '7.0.2'
-        lintVersion = '30.0.2'
-
-        // Upcoming lint target: Bumble Bee / AGP 7.1
-        gradlePluginVersion = '7.1.0-alpha12'
-        lintVersion = '30.1.0-alpha12'
+        kotlinVersion = '1.6.0'
+        gradlePluginVersion = '7.0.3'
+        lintVersion = '30.0.3'
     }
 
     repositories {
@@ -20,43 +15,18 @@ buildscript {
     }
 }
 
-plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.6.10'
-    id 'java-library'
-    //id 'com.android.lint'
-    id 'maven-publish'
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
 }
 
-group 'io.github.westonal'
-version '1.0-SNAPSHOT'
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
 
 repositories {
     google()
     mavenCentral()
-}
-
-dependencies {
-    compileOnly 'com.android.tools.lint:lint-api:30+'
-    compileOnly 'com.android.tools.lint:lint-checks:30+'
-
-    testImplementation 'com.android.tools.lint:lint-tests:30+'
-    testImplementation 'junit:junit:4.13.2'
-}
-
-jar {
-    manifest {
-        attributes('Lint-Registry-v2': 'io.github.westonal.lint.Registry')
-    }
-}
-
-publishing {
-    publications {
-        maven(MavenPublication) {
-            groupId = group
-            artifactId = 'just-desserts'
-            version = '0.1'
-
-            from components.java
-        }
-    }
 }
