Try to get jitpack to skip the app

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,10 @@ android {
 }
 
 dependencies {
+
+    //just for jitpack's info
+    implementation project(':lintchecks')
+
     lintChecks project(':lintchecks')
 }
 
